# Chat-speech

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FFMPEG_SETUP.md  Makefile  RAG_GUIDE.md  README.md  RUN_STT.md  VOICE_SETUP.md  architecture.md  docker-compose.yml  dsd  load_env.ps1  pyproject.toml  requirements-rag.txt  requirements-voice.txt  requirements.txt  test_langgraph.py  test_voice_quick.py
alembic/: env.py
app/: app.py  main.py  schemas.py
app/config/: llm_config.py  prompts.py
app/core/: config.py  database.py  exception_handler.py  llm_client.py
app/crud/: message.py  session.py  user.py
app/models/: base.py  todo.py
app/routers/: chat.py  message.py  session.py  todo.py  user.py  voice.py
app/schemas/: todo.py
app/service/: chunking.py  ingestor.py  main.py  retriever.py
app/service/RAG/: batch_processor.py  chunk_and_ingest.py  chunking.py  ingestion_pipeline.py  ingestor.py  main.py  rag_metrics.py  rag_pipeline.py  retriever.py
app/service/speech/: stt.py  test.py  tts.py
app/utils/: logger.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/math_philosophy/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/math_philosophy/0/segments/560870b2-0801-4804-81d4-d7baa9d03380/: mutable_id_tracker.mappings
qdrant_storage/collections/math_philosophy/0/segments/6dad7f5d-bd22-4d2f-88e7-a610c2967dbb/: mutable_id_tracker.mappings
tests/: test_voice.py  todo.py
vector_data/: bm25_data.pkl  ingestion_metadata.pkl
(+34 files in other folders)
