[project]
name = "fastapi-todo"
version = "0.1.0"
description = "FastAPI Todo Application with PostgreSQL and RAG capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # FastAPI Core
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  
  # Database
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
  
  # Utilities
  "python-multipart>=0.0.6",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
# RAG dependencies (install with: pip install -e ".[rag]")
rag = [
  "langchain>=0.1.0",
  "langchain-google-genai>=0.0.6",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
  "spacy>=3.7.0",
  "scikit-learn>=1.3.0",
  "PyMuPDF>=1.23.0",
  "numpy>=1.24.0",
]

# Development dependencies
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
  "black>=23.11.0",
  "ruff>=0.1.6",
  "isort>=5.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-v -s"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
